--- a/tos.html
+++ b/tos.html
@@ -15,6 +15,7 @@
     <p>You can cancel your subscription anytime and you won't be charged the next bill cycle.</p>
     <br>
     <br>
+    <p><a href="https://koushik.substack.com/">Cut the BS Newsletter</a>
     
 </body>
 </html>
