--- a/tos.html
+++ b/tos.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body style="font-family: sans-serif; margin-left: 40px; margin-top: 40px;">
+<body>
     <a href="index.html" style="text-decoration: none; color: inherit;"><p><b>Koushik Murali</b></p></a>
     <br>
     <br>
