--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <a href="index.html" style="text-decoration: none; color: inherit;"><p><b>Koushik Murali</b></p></a>
     <br>
     <br>
-    <p><b>Novice potter. Graphic Designer. Gamer. Biker</b></p>
+    <p><b>Novice potter. Graphic Designer. Gamer. Biker.</b></p>
     <br>
     <p>Contact: +91 7373074962  |  m23koushik@gmail.com</p>
+    <p>+91 7373074962</p>
+    <p>m23koushik@gmail.com</p>
     
     <br>
     <br>
