--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br>
     <p><b>Novice potter. Graphic Designer. Gamer. Biker.</b></p>
     <br>
-    <p>Contact: +91 7373074962  |  m23koushik@gmail.com</p>
+    <p>Contact</p>
     <p>+91 7373074962</p>
     <p>m23koushik@gmail.com</p>
     
