--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Koushik Murali | Novice Potter, graphic designer</title>
+    <meta name="Koushik Murali" content="Novice Potter, graphic designer based out of Coimbatore, India">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
