--- a/tos.html
+++ b/tos.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Koushik Murali | Cut the BS ToS</title>
+    <meta name="Koushik Murali" content="Terms of service and cancellation policy for cut the BS newsletter">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
