--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <br>
     <p><b>Novice potter. Graphic Designer. Gamer. Biker.</b></p>
     <br>
-    <p>Contact</p>
-    <p>+91 7373074962</p>
-    <p>m23koushik@gmail.com</p>
+    <p><b>Contact</b></p>
+    <p>m23kshk@gmail.com</p>
     
     <br>
     <br>
