--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="index.html" style="text-decoration: none; color: inherit;"><p><b>Koushik Murali</b></p></a>
     <br>
     <br>
-    <p><b>Novice potter. Graphic Designer. Gamer. Biker.</b></p>
+    <p><b>Potter. Graphic Designer. Gamer. Biker.</b></p>
     <br>
     <p><b>Contact</b></p>
     <p>m23kshk@gmail.com</p>
