--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <br>
     <br>
-    <p><a href="https://koushik.substack.com/">Cut the BS Newsletter</a>  |  <a href="tos.html">ToS & cancellation</a></p>
+    <p><a href="https://koushik.substack.com/">My Newsletter</a>  |  <a href="tos.html">ToS & cancellation</a></p>
     
 </body>
 </html>
