--- a/tos.html
+++ b/tos.html
@@ -11,10 +11,14 @@
     <a href="index.html" style="text-decoration: none; color: inherit;"><p><b>Koushik Murali</b></p></a>
     <br>
     <br>
-    <h2><b>Cut The BS Document</b></h2>
+    <h2><b>Newsletter Document</b></h2>
     <br>
     <b><p>Cancellation</p></b>
     <p>You can cancel your subscription anytime and you won't be charged the next bill cycle.</p>
+    <br>
+    <br>
+    <b><p>ToS and Privacy policy</p></b>
+    <p>In accordance with Substack's terms and policy.</p>
     <br>
     <br>
     <p><a href="https://koushik.substack.com/">Cut the BS Newsletter</a>
