--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <body>
     <div class="grid-container">
         <div class="grid-item">
-            <a href="index.html" style="text-decoration: none; color: inherit;"><p><b>Koushik Murali</b></p></a>
-            <p>Potter. Graphic Designer. Gamer. Biker.</p>
+            <p>
+            <a href="index.html"><p><b>Koushik Murali</b></p></a>
+            Potter. Graphic Designer. Gamer. Biker.
+            </p>
  
             <a href="https://koushik.substack.com/"><button>subscribe to my newsletter</button></a>
             <br>
             <b>Connect</b>
             <p>
-                m23kshk@gmail.com<br>
+                <a href="mailto:m23kshk@gmail.com">m23kshk@gmail.com</a><br>
                 <a href="https://twitter.com/kshik_">Twitter</a><br>
                 <a href="https://www.instagram.com/m23koushik/">Instagram</a><br>
             </p>
@@ -32,7 +34,7 @@
         </div>
 
         <div class="grid-item wide">
-            <img src="pfp2.jpg" style="width:80%">
+            <img src="pfp2.jpg" class="grid-content">
         </div>
       
     </div>
