--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koushik Murali | Novice Potter, graphic designer</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <meta name="Koushik Murali" content="Novice Potter, graphic designer based out of Coimbatore, India">
     <link rel="stylesheet" href="styles.css">
 </head>
