gallery and spacing

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koushik Murali | Novice Potter, graphic designer</title>
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <meta name="Koushik Murali" content="Novice Potter, graphic designer based out of Coimbatore, India">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="grid-container">
-        <div class="grid-item">
+        <div class="grid-item navbar">
             <p>
             <a href="index.html"><p><b>Koushik Murali</b></p></a>
             Potter. Graphic Designer. Gamer. Biker.
@@ -35,7 +35,21 @@
         </div>
 
         <div class="grid-item wide">
-            <img src="pfp2.jpg" class="grid-content">
+            <img src="img/pfp2.jpg" class="grid-content">
+            <img src="img/pot-compressed.jpg" class="grid-content">
+            <img src="img/first-pots.jpg" class="grid-content">
+            <video autoplay muted loop class="grid-content">
+                <source src="img/gif1.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <video autoplay muted loop class="grid-content">
+                <source src="img/gif2.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <video autoplay muted loop class="grid-content">
+                <source src="img/e-gif.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
       
     </div>
