--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="grid-item navbar">
+        <div class="grid-item">
             <p>
             <a href="index.html"><p><b>Koushik Murali</b></p></a>
             Potter. Graphic Designer. Gamer. Biker.
@@ -38,15 +38,15 @@
             <img src="img/pfp2.jpg" class="grid-content">
             <img src="img/pot-compressed.jpg" class="grid-content">
             <img src="img/first-pots.jpg" class="grid-content">
-            <video autoplay muted loop class="grid-content">
+            <video loop={true} muted={true} autoplay={true} playsinline={true} class="grid-content">
                 <source src="img/gif1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <video autoplay muted loop class="grid-content">
+            <video loop={true} muted={true} autoplay={true} playsinline={true} class="grid-content">
                 <source src="img/gif2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <video autoplay muted loop class="grid-content">
+            <video loop={true} muted={true} autoplay={true} playsinline={true} class="grid-content">
                 <source src="img/e-gif.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
