--- a/index.html
+++ b/index.html
@@ -12,26 +12,22 @@
     <div class="grid-container">
         <div class="grid-item">
             <p>
-            <a href="index.html"><p><b>Koushik Murali</b></p></a>
+            <a href="index.html"><p><b>Koushik Murali</b></a><br>
             Potter. Graphic Designer. Gamer. Biker.
             </p>
- 
             <a href="https://koushik.substack.com/"><button>subscribe to my newsletter</button></a>
-            <br>
-            <b>Connect</b>
             <p>
-                <a href="mailto:m23kshk@gmail.com">m23kshk@gmail.com</a><br>
-                <a href="https://twitter.com/kshik_">Twitter</a><br>
-                <a href="https://www.instagram.com/m23koushik/">Instagram</a><br>
+                <b>Connect</b><br>
+                <a href="mailto:m23kshk@gmail.com" target="_blank">m23kshk@gmail.com</a><br>
+                <a href="https://twitter.com/kshik_" target="_blank">Twitter</a><br>
+                <a href="https://www.instagram.com/m23koushik/" target="_blank">Instagram</a><br>
             </p>
-            <br>
-      
-            <b>Past</b>
        
             <p>
+                <b>Past</b><br>
                 Hashnode, Hasura, Pickyourtrail
             </p>
-            <br>
+
         </div>
 
         <div class="grid-item wide">
