--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
 
         <div class="grid-item wide">
             <img src="img/pfp2.jpg" class="grid-content">
+            <img src="img/article1.png" class="grid-content">
             <img src="img/pot-compressed.jpg" class="grid-content">
+            <img src="img/mudhorn.png" class="grid-content">
+            <img src="img/mandogrogu.jpg" class="grid-content">
             <img src="img/first-pots.jpg" class="grid-content">
+            <img src="img/darth.png" class="grid-content">
+            <img src="img/croc.jpg" class="grid-content">
+           
+            
             <video loop={true} muted={true} autoplay={true} playsinline={true} class="grid-content">
                 <source src="img/gif1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
