--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Koushik Murali | Novice Potter, graphic designer</title>
+    <meta property="og:image" content="img/og-img.png"/>
+    <meta property="og:site_name" content="Koushik Murali"/>
+    <meta property="og:description"
+    content="Potter, Graphic Designer based out of Coimbatore, India. Reach out for pottery classes and workshop"/>
+    <title>Koushik Murali</title>
     <link rel="icon" href="img/favicon.png" type="image/png">
-    <meta name="Koushik Murali" content="Novice Potter, graphic designer based out of Coimbatore, India">
+    <meta name="Koushik Murali" content="Potter, Graphic Designer based out of Coimbatore, India">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
