update event gift

--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
                 </div>
             </div>
 
-            <video loop={true} muted={true} autoplay={true} playsinline={true} class="grid-content">
-                <source src="img/e-gif.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+        
+            <img src="img/e01.png" class="grid-content">
+            
 
             <div class="inner-grid-container">
                 <div class="grid-item">
