--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
+    <meta name="viewport" content="width=1000; user-scalable=0;" />
     <meta property="og:image" content="img/og-img.png"/>
     <meta property="og:site_name" content="Koushik Murali"/>
     <meta property="og:description"
