--- a/index.html
+++ b/index.html
@@ -41,9 +41,19 @@
             </video>
             <img src="img/pfp2.jpg" class="grid-content">
             <img src="img/article1.png" class="grid-content">
+            <img src="img/studiogenki.png" class="grid-content">
             <img src="img/pot-compressed.jpg" class="grid-content">
             <img src="img/mudhorn.png" class="grid-content">
             <img src="img/mandogrogu.jpg" class="grid-content">
+            <img src="img/pots.png" class="grid-content">
+                        <div class="inner-grid-container">
+                <div class="grid-item">
+                    <img src="img/abstract1.png" class="grid-content">
+                </div>
+                <div class="grid-item">
+                    <img src="img/abstract2.png" class="grid-content">
+                </div>
+            </div>
             <img src="img/first-pots.jpg" class="grid-content">
             
         
