Add about page, update images

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 Hashnode, Hasura, Pickyourtrail
             </p>
 
+            <p>
+                <a href="/about.html"><b>About me</b><br></a>
+            </p>
+
         </div>
 
         <div class="grid-item wide">
