--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta property="og:image" content="img/og-img.png"/>
     <meta property="og:site_name" content="Koushik Murali"/>
     <meta property="og:description"
-    content="Potter, Graphic Designer based out of Coimbatore, India. Reach out for pottery classes and workshop"/>
+    content="Potter, Graphic Designer based out of Coimbatore, India."/>
     <title>Koushik Murali</title>
     <link rel="icon" href="img/favicon.png" type="image/png">
     <meta name="Koushik Murali" content="Potter, Graphic Designer based out of Coimbatore, India">
